ARROW-2133: [Python] Fix segfault on conversion of empty nested array to Pandas

Based on PR #1588

Author: Antoine Pitrou <antoine@python.org>

Closes #1591 from pitrou/ARROW-2133-segfault-nested-array-to-pandas and squashes the following commits:

3ac6e522 [Antoine Pitrou] ARROW-2133: [Python] Fix segfault on conversion of empty nested arrays to Pandas